Fixed issue with too wide layout and visual layout of servermessages listing.

--- a/app/install.component.html
+++ b/app/install.component.html
@@ -19,5 +19,7 @@
 <div class="large_background_footer">&nbsp;</div>
 
 <div id="page_content" class="page_content">
-	<applist [apps]="apps" [selectedMode]="selectedMode"></applist>
+	<div id="page_content_inner" class="page_content_inner">
+		<applist [apps]="apps" [selectedMode]="selectedMode"></applist>
+	</div>
 </div>
