--- a/app/installapp.component.html
+++ b/app/installapp.component.html
@@ -10,7 +10,9 @@
 </nav>
 
 <div id="page_content" class="page_content">
-	<appitem [app]="selectedApp"></appitem>
+	<div id="page_content_inner" class="page_content_inner">
+		<appitem [app]="selectedApp"></appitem>
+	</div>
 </div>
 
 <!--
