--- a/app/app.component.css
+++ b/app/app.component.css
@@ -9,13 +9,13 @@
   background-color: #f2f2f2;
   width: 100%;
   height: 80px;
-  padding-left: 50px;
   padding-top: 20px;
   padding-bottom: 20px;
 }
 
 #logolink {
   float: left;
+  margin-left: 50px;
 }
 
 #appstorelogo {
