--- a/app/appitem.component.html
+++ b/app/appitem.component.html
@@ -1,10 +1,6 @@
 
 
 <div *ngIf="app" id="main_content">
-	<li *ngFor="let message of _appservice.serverMessages" [style.color]="_appservice.getServerMessageColor(message.type)">
-		{{message.text}}
-	</li>
-
 	<!--
 	  images: ImageItem[];
 	-->
@@ -91,6 +87,13 @@
 		<div class="packageFieldValue"><a href="http://{{app.readme}}">link</a></div>
 	</div>
 	<div class="menu_clear">&nbsp;</div>
+
+	<div id="serverMessages" class="serverMessages">
+		<div *ngFor="let message of _appservice.serverMessages" [class]="_appservice.getServerMessageStyle(message.type)">
+			{{message.text}}
+		</div>
+	</div>
+
 </div>
 
 <h1 *ngIf="!app"> Application not found</h1>
