--- a/app/manageapp.component.html
+++ b/app/manageapp.component.html
@@ -11,6 +11,8 @@
 </nav>
 
 <div id="page_content" class="page_content">
-	<appitem [app]="selectedApp"></appitem>
+	<div id="page_content_inner" class="page_content_inner">
+		<appitem [app]="selectedApp"></appitem>
+	</div>
 </div>
 
