Refactored mockservice, minor changes to naming

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -2,7 +2,7 @@
 <div id="main">
 	<div id="top_bar" class="top_bar">
 		<a id="logolink" class="logolink" routerLink="/intro"><img id="appstorelogo" class="appstorelogo" src="assets/icon-80p.png" alt="" /></a>
-		<div id="logoname" class="logoname">Spaceify Appstore</div>
+		<div id="logoname" class="logoname">Spaceify Store</div>
 	</div>
 
 	<div id="content_container">
