--- a/app/applist.component.html
+++ b/app/applist.component.html
@@ -13,6 +13,7 @@
 				</div>
 				<div class="appname">{{app.name}}</div>
 				<div class="appdescription">{{app.short_description}}</div>
+				<div >{{app.isInstalled}}</div>
 			</a>
 
 <!--
