--- a/app/install.component.html
+++ b/app/install.component.html
@@ -1,7 +1,7 @@
 
 <nav class="menu_container">
-	<a class="menu_topic" routerLink="/install" routerLinkActive="navActive">INSTALL</a>
-	<a class="menu_topic" routerLink="/manage" routerLinkActive="navActive">MANAGE</a>
+	<a class="menu_topic" routerLink="/install" routerLinkActive="navActive">STORE</a>
+	<a class="menu_topic" routerLink="/manage" routerLinkActive="navActive">INSTALLED APPLICATIONS</a>
 
 	<div id="search_bar" class="search_bar">
 		<input type="search" id="search" placeholder="Search" #search (keyup.enter)="doSearch(search.value)">
