Added new default icon.

--- a/app/appitem.component.html
+++ b/app/appitem.component.html
@@ -7,7 +7,7 @@
 
 	<div class="appinfoblock">
 		<div class="appiconleft">
-			<img [sp_src]="app.icon" alt="" onError="this.src='./assets/icon-80p.png';" />
+			<img [sp_src]="app.icon" alt="" onError="this.src='./assets/default_icon-128p.png';" />
 		</div>
 
 		<div class="appinforight">
