--- a/app/manageapp.component.html
+++ b/app/manageapp.component.html
@@ -1,14 +1,16 @@
 
-
+<!--
 <nav class="menu_container">
 	<a class="menu_topic" routerLink="/install" routerLinkActive="navActive">INSTALL</a>
 	<a class="menu_topic" routerLink="/manage" routerLinkActive="navActive">MANAGE</a>
 
-	<!-- <div id="search_bar" class="search_bar">
+	//<!- <div id="search_bar" class="search_bar">
 		<input type="search" id="search" placeholder="Search" #search (keyup.enter)="doSearch(search.value)">
-	</div> -->
+	//</div> ->
 	<br class="menu_clear" />
 </nav>
+
+-->
 
 <div id="page_content" class="page_content">
 	<div id="page_content_inner" class="page_content_inner">
