Taiga issue 97, fixed search

--- a/app/install.component.html
+++ b/app/install.component.html
@@ -10,6 +10,7 @@
 </nav>
 
 -->
+<contextbar [searchEnabled]="true" (searchEvent)="doSearch($event.value)"></contextbar>
 
 
 <div id="large_background" class="large_background large_background1">
