--- a/app/manage.component.html
+++ b/app/manage.component.html
@@ -11,6 +11,8 @@
 
 -->
 
+<contextbar [searchEnabled]="true" (searchEvent)="doSearch($event.value)"></contextbar>
+
 <div id="large_background" class="large_background large_background1">
 	<div class="content">
 		<h1>Easy to Manage</h1>
