--- a/app/manageapp.component.html
+++ b/app/manageapp.component.html
@@ -12,6 +12,8 @@
 
 -->
 
+<contextbar></contextbar>
+
 <div id="page_content" class="page_content">
 	<div id="page_content_inner" class="page_content_inner">
 		<appitem [app]="selectedApp"></appitem>
