Log Out feature

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -9,6 +9,7 @@
 		<a class="topBarLogoLink" routerLink="/intro"><img sp_src="assets/icon-80p.png" alt="" /></a>
 		<div class="topBarLogoText">Spaceify Edge</div>
 		<a class="topBarPageLink" (click)="loadLaunchPage()"><img sp_src="assets/launchpage.png" alt="" /></a>
+		<a class="topBarPageLink" (click)="adminLogOut()"><img sp_src="assets/logout.png" alt="" /></a>
 	</div>
 
 	<!--
