--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,15 +1,15 @@
 <div id="main" style="float: left">
 <!--
 	<div class="topBar">
-		<a class="topBarLogoLink" routerLink="/intro"><img sp_src="assets/icon-80p.png" alt="" /></a>
+		<a class="topBarLogoLink" routerLink="/intro"><img sp_src="assets/images/icon-80p.png" alt="" /></a>
 		<div class="topBarLogoText">Spaceify Store</div>
 	</div>
 -->
 	<div class="topBar">
-		<a class="topBarLogoLink" routerLink="/intro"><img sp_src="assets/icon-80p.png" alt="" /></a>
+		<a class="topBarLogoLink" routerLink="/intro"><img sp_src="assets/images/icon-80p.png" alt="" /></a>
 		<div class="topBarLogoText">Spaceify Edge</div>
-		<a class="topBarPageLink" (click)="loadLaunchPage()"><img sp_src="assets/launchpage.png" alt="" /></a>
-		<a class="topBarPageLink" (click)="adminLogOut()"><img sp_src="assets/logout.png" alt="" /></a>
+		<a class="topBarPageLink" (click)="loadLaunchPage()"><img sp_src="assets/images/launchpage.png" alt="" /></a>
+		<a class="topBarPageLink" (click)="adminLogOut()"><img sp_src="assets/images/logout.png" alt="" /></a>
 	</div>
 
 	<!--
@@ -33,7 +33,7 @@
 
 	<div id="footer" class="footer">
 		<div class="footerContentLeft">
-			<img id="32pxc" sp_src="assets/by-nc-nd_eu.png" width="91" height="32">
+			<img id="32pxc" sp_src="assets/images/by-nc-nd_eu.png" width="91" height="32">
 		</div>
 		<div class="footerContentLeft">
 			<span>Copyright &copy; 2014 - 2017 Spaceify Oy</span>
