--- a/assets/css/material-icons.css
+++ b/assets/css/material-icons.css
@@ -3,7 +3,7 @@
 	font-family: 'Material Icons';
 	font-style: normal;
 	font-weight: 400;
-	src: local('Material Icons'), local('MaterialIcons-Regular'), url(assets/materialicons.v17.woff2) format('woff2');
+	src: local('Material Icons'), local('MaterialIcons-Regular'), url(assets/fonts/materialicons.v17.woff2) format('woff2');
 }
 
 .material-icons {
