--- a/assets/css/spaceify.edge.css
+++ b/assets/css/spaceify.edge.css
@@ -1,11 +1,55 @@
 /* COMMON STYLE FOR ALL EDGE PAGES */
+/*
 body {
 	margin: 0;
 	padding: 0;
 	background-color: #5fc4b4;
 	font-family: Verdana, Arial, Helvetica, sans-serif, Roboto, 'Segoe UI Light_', 'Open Sans Light';
 }
+*/
 
+html, body {
+	margin: 0px;
+	padding: 0px;
+	width: 100%;
+	color: #888;
+}
+
+body, input[text], button {
+	color: #888;
+	background-color: #5fc4b4;
+	font-family: Verdana, Arial, Helvetica, sans-serif, Roboto, 'Segoe UI Light_', 'Open Sans Light';
+}
+
+#edgeBody {
+	color: #000;
+}
+
+	/* COMMON CONTAINERS FOR ALL PAGES -- -- -- -- -- -- -- -- -- -- */
+.edgeContentContainer {
+	width: 100%;
+	background-color: #fff;
+	margin: 0px;
+	padding: 20px 0px 20px 0px;
+}
+
+.edgeContainer {
+	position: relative;
+	width: 100%;
+	max-width: 850px;
+	margin: 0 auto;
+}
+
+.edgeContainer.login {
+	width: 400px;
+	max-width: 400px;
+	height: auto;
+	padding: 1em 0;
+	margin: 1em auto;
+	border: 1px solid #ddd;
+}
+
+	/* -- -- -- -- -- -- -- -- -- -- */
 .edgeH {
 	margin: 0px;
 	padding: 0px;
@@ -17,6 +61,7 @@ body {
 .edgeH.H5 { font-size: 1.1em; font-weight: normal; }
 .edgeH.H6 { font-size: 1.0em; font-weight: normal; }
 
+	/* TILE -- -- -- -- -- -- -- -- -- -- */
 .edgeTile {
 	float: left;
 	display: inline;
@@ -25,6 +70,7 @@ body {
 	padding: 0px;
 	width: 302px;
 	height: 152px;
+	color: #000;
 	cursor: pointer;
 	overflow: hidden;
 	visibility: visible;
@@ -56,21 +102,13 @@ body {
 	color: #888;
 }
 
-.edgeLoading {
-	top: 50%;
-	left: 50%;
-	display: none;
-	position: fixed;
-	background-color: transparent;
-}
-.edgeLoadingContent {
-	top: -50%;
-	left: -50%;
-	position: relative;
-	border: 1px solid #ccc;
-	background-color: #FFF;
+.edgeSmallInfo {
+	color: #333;
+	font-size: 80%;
+	margin: 10px 0px 0px 0px;
 }
 
+	/* INFORMATION -- -- -- -- -- -- -- -- -- -- */
 .edgeAlert {
 	position: fixed;
 	float: left;
@@ -87,6 +125,7 @@ body {
 	vertical-align: middle;
 	visibility: hidden;
 	top: 0px;
+	color: #000;
 }
 .edgeAlert.error {
 	border: 1px solid rgb(255, 64, 64);
@@ -95,6 +134,28 @@ body {
 .edgeAlert.success {
 	border: 1px solid rgb(64, 255, 64);
 	background-color:rgba(0, 255, 0, 0.7);
+}
+
+.edgeInfo {
+	width: auto;
+	height: auto;
+
+	float: left;
+	position: relative;
+	margin: 10px 0px;
+	padding: 10px;
+	border-radius: 5px;
+	box-sizing: border-box;
+	border: solid 1px #ddd;
+	background-color: #fff;
+
+	color: #000;
+	text-align: justify;
+	text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+.edgeInfo.warning {
+	border: 8px dashed rgb(255, 0, 0);
 }
 
 .edgeCertIframe {
@@ -106,50 +167,9 @@ body {
 	overflow: hidden;
 }
 
-.edgeInfo {
-	width: auto;
-	height: auto;
-	
-	float: left;
-	position: relative;
-	margin: 10px 0px;
-	padding: 10px;
-	border-radius: 5px;
-	box-sizing: border-box;
-	border: solid 1px #ddd;
-	background-color: #fff;
-
-	text-align: justify;
-	text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
-}
-
-	/* ADMIN -- -- -- -- -- -- -- -- -- -- */
-/* Log In */
-.adminInput {
-	margin: 0;
-	padding: 0;
-	height: 52px;
-	line-height: 48px;
-	font-size: 115%;
-	box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-}
-.adminInput.wider {
-	width: 100%;
-}
-
-.adminInputContainer {
-	width: 100%;
-	height: 100%;
-	margin: 0 100px 1em 100px;
-}
-.adminInputContainer.zero
-{
-	margin: 0;	
-}
-
-.adminButton {
+	/* BUTTON -- -- -- -- -- -- -- -- -- -- */
+.edgeButton {
+	color: #000;
 	cursor: pointer;
 	float: left;
 	width: 200px;
@@ -167,17 +187,45 @@ body {
 	border: 1px solid #A0A0A0;
 	box-shadow: inset 1px 1px 2px #ddd8dc;
 }
-.adminButton.normal
+.edgeButton.normal
 {
 	clear: both;
 	float: none;
 	margin: 0px;
 }
-.adminButton:hover {
+.edgeButton.inrow {
+	margin: 0px 10px 0px 0px;
+}
+.edgeButton:hover {
 	background-color: #6FD3C4;
 }
 
-.adminLogo {
+	/* LOGIN -- -- -- -- -- -- -- -- -- -- */
+.loginInput {
+	margin: 0;
+	padding: 0;
+	height: 52px;
+	line-height: 48px;
+	font-size: 115%;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+}
+.loginInput.wider {
+	width: 100%;
+}
+
+.loginInputContainer {
+	width: 100%;
+	height: 100%;
+	margin: 0 100px 1em 100px;
+}
+.loginInputContainer.zero
+{
+	margin: 0;
+}
+
+.loginLogo {
 	width: 291px;
 	height: 100px;
 	white-space: nowrap;
@@ -185,146 +233,19 @@ body {
 	margin: 0 0 1em 50px;
 }
 
-.adminLogoHelper {
+.loginLogoHelper {
 	display: inline-block;
 	height: 100%;
 	vertical-align: middle;
 }
 
-.adminLogoImage {
+.loginLogoImage {
 	vertical-align: middle;
 	max-width: 291px;
 	max-height: 100px;
 }
-.adminLogoImage:hover {
+.loginLogoImage:hover {
 	cursor: pointer;
-}
-
-/* Common containers for all admin pages */
-.adminContainer {
-	margin: 0;
-	padding: 0;
-	width: 100%;
-	height: 100%;
-}
-.adminContainer.half {
-	float: left;
-	clear: none;
-	width: 50%;
-	padding: 10px 15px;
-	box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-}
-.adminContainer.half > div {
-	margin: 0;
-	padding: 0;
-	float: left;
-	clear: left;
-	display: inline-block;
-}
-
-.topBar {
-	width: 100%;
-	height: 80px;
-	line-height: 80px;
-	vertical-align: center;
-	padding: 20px 0px 20px 0px;
-	background-color: #f2f2f2;
-}
-
-.topBarLogoLink {
-	float: left;
-	margin-left: 40px;
-}
-
-.topBarLogoLink img {
-	width: 115px;
-	height: 80px;
-	display: block;
-	margin:auto;
-}
-
-.topBarPageLink {
-	height: 80px;
-	line-height: 80px;
-	float: right;
-	margin: auto 40px auto auto;
-}
-
-.topBarPageLink:hover {
-	cursor: pointer;
-}
-
-.topBarPageLink img {
-	width: 64px;
-	height: 64px;
-	display: block;
-	margin: 8px auto auto auto;
-	vertical-align: middle;
-}
-
-.topBarLogoText {
-	float: left;
-	color: #1ca7ce;
-	font-size: 40px;
-	margin-left: 15px;
-}
-
-.contentContainer {
-	width: 100%;
-	background-color: #fff;
-	margin: 0px;
-	padding: 20px 0px 20px 0px;
-}
-
-.container {
-	position: relative;
-	width: 100%;
-	max-width: 850px;
-	margin: 0 auto;
-}
-
-.container.admin {
-	width: 400px;
-	max-width: 400px;
-	height: auto;
-	padding: 1em 0;
-	margin: 1em auto;
-	border: 1px solid #ddd;
-}
-
-.footer {
-	float: left;
-	clear: both;
-	font-size: 1.0em;
-	height: 32px;
-	line-height: 32px;
-	width: 100%;
-	box-sizing: border-box;
-	margin: 0px;
-	padding: 4px 0px 0px 0px;
-	vertical-align: middle;
-	color: #003b47;
-	font-weight: normal;
-}
-
-.footerContentLeft {
-	float: left;
-	clear: none;
-	margin: 0px 0px 0px 10px;
-	padding: 0px;
-	height: 32px;
-	line-height: 32px;
-	vertical-align: middle;
-}
-
-.large_background_footer {
-	width: 100%;
-	height: 10px;
-	background-color: #1aa8ce;
-	padding: 0px;
-	margin: 0px;
 }
 
 	/* MISC -- -- -- -- -- -- -- -- -- -- */
