--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,28 +1,29 @@
 /* Master Styles */
-h1 {
-	color: #004896;
-	font-family: Arial, Helvetica, sans-serif;	 
-	font-size: 250%;
-	margin-top: 10px;
-}
 
-h2, h3 { 
-	color: #004896;
-	font-family: Arial, Helvetica, sans-serif;	 
-	font-weight: lighter;
-}
-
-html, body { 
+html, body {
 	margin: 0px;
 	padding: 0px;
 	width: 100%;
 	color: #888;
 }
 
-body, input[text], button { 
+body, input[text], button {
 	color: #888;
 	background-color: #5fc4b4;
 	font-family: Verdana, Arial, Helvetica, sans-serif, Roboto, 'Segoe UI Light_', 'Open Sans Light';
+}
+
+h1 {
+	color: #004896;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 250%;
+	margin-top: 10px;
+}
+
+h2, h3 {
+	color: #004896;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: lighter;
 }
 
 p {
@@ -163,6 +164,82 @@ input#search {
 	margin-right: 20px;
 }
 
+/* Top bar and footer */
+.topBar {
+	width: 100%;
+	height: 80px;
+	line-height: 80px;
+	vertical-align: center;
+	padding: 20px 0px 20px 0px;
+	background-color: #f2f2f2;
+}
+
+.topBarLogoLink {
+	float: left;
+	margin-left: 40px;
+}
+
+.topBarLogoLink img {
+	width: 115px;
+	height: 80px;
+	display: block;
+	margin: auto;
+}
+
+.topBarPageLink {
+	height: 80px;
+	line-height: 80px;
+	float: right;
+	margin: auto 40px auto auto;
+}
+
+.topBarPageLink:hover {
+	cursor: pointer;
+}
+
+.topBarPageLink img {
+	width: 64px;
+	height: 64px;
+	display: block;
+	margin: 8px auto auto auto;
+	vertical-align: middle;
+}
+
+.topBarLogoText {
+	font-family: 'Roboto Light', sans-serif;
+	float: left;
+	color: #1ca7ce;
+	font-size: 40px;
+	margin-left: 15px;
+}
+
+.footer {
+	float: left;
+	clear: both;
+	font-family: 'Roboto Light', sans-serif;
+	font-size: 1.0em;
+	height: 32px;
+	line-height: 32px;
+	width: 100%;
+	box-sizing: border-box;
+	margin: 0px;
+	padding: 4px 0px 0px 0px;
+	vertical-align: middle;
+	color: #003b47;
+	font-weight: normal;
+}
+
+.footerContentLeft {
+	float: left;
+	clear: none;
+	margin: 0px 0px 0px 10px;
+	padding: 0px;
+	height: 32px;
+	line-height: 32px;
+	vertical-align: middle;
+}
+
+/* * */
 .serverMessages {
 	width: 100%;
 	margin-top: 1em;
