--- a/assets/css/spaceify.edge.css
+++ b/assets/css/spaceify.edge.css
@@ -30,7 +30,7 @@ body, input[text], button {
 	width: 100%;
 	background-color: #fff;
 	margin: 0px;
-	padding: 20px 0px 20px 0px;
+	padding: 20px 10px 20px 10px;
 }
 
 .edgeContainer {
@@ -164,9 +164,11 @@ body, input[text], button {
 	text-align: justify;
 	text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
-
 .edgeInfo.warning {
 	border: 8px dashed rgb(255, 0, 0);
+}
+.edgeInfo.crtErr {
+	margin: 0px 10px 0px 10px;
 }
 
 .edgeCertIframe {
@@ -205,7 +207,7 @@ body, input[text], button {
 	margin: 0px;
 }
 .edgeButton.inrow {
-	margin: 0px 10px 0px 0px;
+	margin: 0px 10px 10px 0px;
 }
 .edgeButton:hover {
 	background-color: #6FD3C4;
