--- a/assets/css/spaceify.edge.css
+++ b/assets/css/spaceify.edge.css
@@ -31,6 +31,7 @@ body, input[text], button {
 	background-color: #fff;
 	margin: 0px;
 	padding: 20px 10px 20px 10px;
+	box-sizing: border-box;
 }
 
 .edgeContainer {
