--- a/assets/css/spaceify.edge.css
+++ b/assets/css/spaceify.edge.css
@@ -17,7 +17,7 @@ html, body {
 
 body, input[text], button {
 	color: #888;
-	background-color: #5fc4b4;
+	background-color: #fff;	/* 5fc4b4 */
 	font-family: Verdana, Arial, Helvetica, sans-serif, Roboto, 'Segoe UI Light_', 'Open Sans Light';
 }
 
