Compatible with latest Edge update

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -38,9 +38,9 @@
 		<div id="popup_menu" class="popup_menu" style="display: none;">
 
 			<span class="popup_menu_row">
-				<a (click)="loadLaunchPage()">
-					<img sp_src="assets/images/launchpage.png" alt="" />
-					<span>Launchpage</span>
+				<a (click)="loadHomepage()">
+					<img sp_src="assets/images/homepage.png" alt="" />
+					<span>Homepage</span>
 				</a>
 			</span>
 			<div class="breaker"></div>
