--- a/app/homepage.applist.component.html
+++ b/app/homepage.applist.component.html
@@ -1,4 +1,4 @@
-<div id="launchpageapplist">
+<div id="homepageapplist">
 
 	<!-- SPACELETS -- -- -- -- -- -- -- -- -- -- -->
 	<h5 *ngIf="apps.spacelet.length > 0" class="edgeH H3" id="spacelet_header"> getString('index', 'spacelets') </h5>
