--- a/app/homepage.component.html
+++ b/app/homepage.component.html
@@ -21,7 +21,7 @@
 
 		<div class="container">
 
-			<launchpageapplist [apps]="apps" [selectedMode]="selectedMode"></launchpageapplist>
+			<homepageapplist [apps]="apps" [selectedMode]="selectedMode"></homepageapplist>
 
 		</div>
 
